--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/style1.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container1">
       <!-- Navigasi Bar -->
       <nav>
         <a href="#"><img class="logo" src="img/logo.png" alt="logo" /></a>
